--- a/src/pattgen_frontend/assets/main.css
+++ b/src/pattgen_frontend/assets/main.css
@@ -1,37 +1,42 @@
 body {
-    font-family: sans-serif;
-    font-size: 1.5rem;
+    font-family: Arial, sans-serif;
+    text-align: center;
 }
 
-img {
-    max-width: 50vw;
-    max-height: 25vw;
-    display: block;
-    margin: auto;
+.header {
+    margin-bottom: 20px;
 }
 
-form {
+.logo {
+    max-width: 100px;
+    height: auto;
+}
+
+.subtitle h2 {
+    margin: 10px 0;
+}
+
+.navigation {
     display: flex;
     justify-content: center;
-    gap: 0.5em;
-    flex-flow: row wrap;
-    max-width: 40vw;
-    margin: auto;
-    align-items: baseline;
+    align-items: center;
 }
 
-button[type="submit"] {
-    padding: 5px 20px;
-    margin: 10px auto;
-    float: right;
+.image-grid {
+    display: grid;
+    grid-template-columns: repeat(2, 1fr);
+    gap: 10px;
+    margin: 0 20px;
 }
 
-#greeting {
-    margin: 10px auto;
-    padding: 10px 60px;
-    border: 1px solid #222;
+.image-grid img {
+    width: 100%;
+    height: auto;
+    cursor: pointer;
 }
 
-#greeting:empty {
-    display: none;
+.arrow {
+    cursor: pointer;
+    font-size: 24px;
+    user-select: none;
 }
