--- a/src/pattgen_frontend/assets/main.css
+++ b/src/pattgen_frontend/assets/main.css
@@ -40,3 +40,23 @@ body {
     font-size: 24px;
     user-select: none;
 }
+
+#player {
+    width: 256px;
+    height: 256px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    border: 1px solid #000; /* Optional, for visual clarity */
+    background: linear-gradient(-45deg, #ee7752, #e73c7e, #23a6d5, #23d5ab);
+    background-size: 400% 400%;
+    animation: none;
+    margin-left: auto;
+    margin-right: auto;
+}
+
+@keyframes gradientBG {
+    0% { background-position: 0% 50%; }
+    50% { background-position: 100% 50%; }
+    100% { background-position: 0% 50%; }
+}
